<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/clr_151718"
    tools:context=".ui.search.SearchFragment">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        android:background="@drawable/background_edit"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:ellipsize="end"
        android:hint="@string/please_search"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_background"
        android:src="@drawable/baseline_manage_search_24"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_edit_text"
        app:layout_constraintTop_toTopOf="@id/search_edit_text" />

    <HorizontalScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="4dp"
            app:chipSpacingVertical="6dp"
            app:singleLine="true"
            app:singleSelection="true"
            app:checkedChip="@id/fist_type"
            android:paddingHorizontal="12dp"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/fist_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.miniyoutube.Chip"
                android:text="@string/default_chip"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/chip_filter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/second_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.miniyoutube.Chip"
                android:text="@string/movie_chip"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/chip_filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/three_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.miniyoutube.Chip"
                android:text="@string/game_chip"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/chip_filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/fourth_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.miniyoutube.Chip"
                android:text="@string/sport_chip"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/chip_filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/fifth_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.miniyoutube.Chip"
                app:chipIconEnabled="true"
                android:text="@string/event_chip"
                app:chipIconTint="@color/chip_filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/sixth_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.miniyoutube.Chip"
                android:text="@string/news_chip"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/chip_filter"/>


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/scrollview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_library_add_24"
        app:layout_constraintTop_toBottomOf="@id/scrollview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint = "@color/clr_0AFFA2"
        android:visibility="gone"
        android:src="@drawable/floating_button"
        android:backgroundTint="@color/clr_151718"
        android:layout_margin="10dp"
        tools:ignore="ContentDescription" />




</androidx.constraintlayout.widget.ConstraintLayout>