<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_151718"
    tools:context=".ui.videodetail.VideoDetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/detail_cardView"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/detail_constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--            <ImageView-->
            <!--                android:id="@+id/detail_cardView_iv"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:scaleType="centerCrop"-->
            <!--                tools:srcCompat="@tools:sample/avatars"/>-->


            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/detail_cardView"
            app:layout_constraintStart_toStartOf="@+id/detail_cardView"
            app:layout_constraintTop_toBottomOf="@+id/detail_cardView">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detail_like_btn"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:background="@drawable/corner_button"
                android:text="@string/detail_like_btn"
                style="@style/detailBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/detail_share_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detail_share_btn"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="21dp"
                android:background="@drawable/corner_button"
                android:text="@string/detail_share_btn"
                style="@style/detailBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_like_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/detail_video_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:text="@string/detail_video_title"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/detail_video_content"
            app:layout_constraintTop_toBottomOf="@+id/detail_constraintLayout" />

        <TextView
            android:id="@+id/detail_video_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/detail_video_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_video_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>